// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements ServerElement given bindings field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(ServerElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements ServerElement given bindings field of type ServerBindingsElement should refract to semantic ApiDOM tree 1`] = `
(ServerElement
  (MemberElement
    (StringElement)
    (ServerBindingsElement)))
`;

exports[`refractor elements ServerElement given externalDocs field of type ExternalDocumentationElement should refract to semantic ApiDOM tree 1`] = `
(ServerElement
  (MemberElement
    (StringElement)
    (ExternalDocumentationElement)))
`;

exports[`refractor elements ServerElement given externalDocs field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(ServerElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements ServerElement given security field values contain ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(ServerElement
  (MemberElement
    (StringElement)
    (ArrayElement
      (ReferenceElement
        (MemberElement
          (StringElement)
          (StringElement))))))
`;

exports[`refractor elements ServerElement given security field values contain SecuritySchemeElement should refract to semantic ApiDOM tree 1`] = `
(ServerElement
  (MemberElement
    (StringElement)
    (ArrayElement
      (SecuritySchemeElement))))
`;

exports[`refractor elements ServerElement given specification extensions should refract x- extension properties 1`] = `
(ServerElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement)))
`;

exports[`refractor elements ServerElement given tags field contains list of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(ServerElement
  (MemberElement
    (StringElement)
    (TagsElement
      (ReferenceElement
        (MemberElement
          (StringElement)
          (StringElement))))))
`;

exports[`refractor elements ServerElement given tags field contains list of type TagElement should refract to semantic ApiDOM tree 1`] = `
(ServerElement
  (MemberElement
    (StringElement)
    (TagsElement
      (TagElement))))
`;

exports[`refractor elements ServerElement given variables field values contain ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(ServerElement
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (ReferenceElement
          (MemberElement
            (StringElement)
            (StringElement)))))))
`;

exports[`refractor elements ServerElement should refract to semantic ApiDOM tree 1`] = `
(ServerElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (ServerVariableElement)))))
`;
